// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS snapshots variables in cmsgov-theme.css match snapshot 1`] = `
"--accordion-button__color: #262626;
--accordion-content__background-color: #ffffff;
--accordion__background-color--hover: #b6bde0;
--accordion__background-color: #e7e9f5;
--accordion__border-bottom-left-radius: 0px;
--accordion__border-bottom-right-radius: 0px;
--accordion__border-color: #f2f2f2;
--accordion__border-top-left-radius: 20px;
--accordion__border-top-right-radius: 20px;
--accordion__border-width: 1px;
--accordion__color: #262626;
--alert-bar__width: 8px;
--alert__background-color--error: #fef5f7;
--alert__background-color--lightweight: #ffffff;
--alert__background-color--success: #f6faf5;
--alert__background-color--warn: #fffce6;
--alert__background-color: #e7e9f5;
--alert__border-color--error: #e31c3d;
--alert__border-color--success: #12890e;
--alert__border-color--warn: #ffe400;
--alert__border-left-color: #0d2499;
--alert__font-color: #262626;
--alert__icon-size: 1.5rem;
--alert__padding: 16px;
--animation-speed-1: 250ms;
--animation-speed-2: 300ms;
--animation-speed-3: 500ms;
--animation-speed-4: 800ms;
--badge__background-color--alert: #e31c3d;
--badge__background-color--info: #0d2499;
--badge__background-color--success: #12890e;
--badge__background-color--warn: #ffe400;
--badge__background-color: #f2f2f2;
--badge__border-radius: 4px;
--badge__font-color--alert: #ffffff;
--badge__font-color--info: #ffffff;
--badge__font-color--success: #ffffff;
--badge__font-color--warn: #262626;
--badge__font-color: #262626;
--button-alt__background-color--active: #d9d9d9;
--button-alt__background-color--disabled: transparent;
--button-alt__background-color--hover: #ffe400;
--button-alt__background-color: transparent;
--button-alt__border-color--active: #07124d;
--button-alt__border-color--disabled: #d9d9d9;
--button-alt__border-color--hover: #09196b;
--button-alt__border-color: #0d2499;
--button-alt__color--active: #07124d;
--button-alt__color--disabled: #d9d9d9;
--button-alt__color--hover: #09196b;
--button-alt__color: #0d2499;
--button-dark-alt__background-color--active: transparent;
--button-dark-alt__background-color--disabled: transparent;
--button-dark-alt__background-color--hover: transparent;
--button-dark-alt__background-color: transparent;
--button-dark-alt__border-color--active: #7bebac;
--button-dark-alt__border-color--disabled: #5a5a5a;
--button-dark-alt__border-color--hover: #c6f6db;
--button-dark-alt__border-color: #ecfcf3;
--button-dark-alt__color--active: #7bebac;
--button-dark-alt__color--disabled: #5a5a5a;
--button-dark-alt__color--hover: #c6f6db;
--button-dark-alt__color: #ecfcf3;
--button-dark__background-color--active: transparent;
--button-dark__background-color--disabled: transparent;
--button-dark__background-color--hover: transparent;
--button-dark__background-color: transparent;
--button-dark__border-color--active: #d9d9d9;
--button-dark__border-color--disabled: #5a5a5a;
--button-dark__border-color--hover: #f2f2f2;
--button-dark__border-color: #ffffff;
--button-dark__color--active: #d9d9d9;
--button-dark__color--disabled: #5a5a5a;
--button-dark__color--hover: #f2f2f2;
--button-dark__color: #ffffff;
--button-ghost-alt__background-color--active: transparent;
--button-ghost-alt__background-color--disabled: transparent;
--button-ghost-alt__background-color--hover: #ffe400;
--button-ghost-alt__background-color: transparent;
--button-ghost-alt__border-color--active: transparent;
--button-ghost-alt__border-color--disabled: transparent;
--button-ghost-alt__border-color--hover: transparent;
--button-ghost-alt__border-color: transparent;
--button-ghost-alt__color--active: #0d2499;
--button-ghost-alt__color--disabled: #5a5a5a;
--button-ghost-alt__color--hover: #0d2499;
--button-ghost-alt__color: #0d2499;
--button-ghost-dark-alt__background-color--active: transparent;
--button-ghost-dark-alt__background-color--disabled: transparent;
--button-ghost-dark-alt__background-color--hover: transparent;
--button-ghost-dark-alt__background-color: transparent;
--button-ghost-dark-alt__border-color--active: transparent;
--button-ghost-dark-alt__border-color--disabled: transparent;
--button-ghost-dark-alt__border-color--hover: transparent;
--button-ghost-dark-alt__border-color: transparent;
--button-ghost-dark-alt__color--active: #42e288;
--button-ghost-dark-alt__color--disabled: #5a5a5a;
--button-ghost-dark-alt__color--hover: #7bebac;
--button-ghost-dark-alt__color: #c6f6db;
--button-ghost-dark__background-color--active: transparent;
--button-ghost-dark__background-color--disabled: transparent;
--button-ghost-dark__background-color--hover: transparent;
--button-ghost-dark__background-color: transparent;
--button-ghost-dark__border-color--active: transparent;
--button-ghost-dark__border-color--disabled: transparent;
--button-ghost-dark__border-color--hover: transparent;
--button-ghost-dark__border-color: transparent;
--button-ghost-dark__color--active: #d9d9d9;
--button-ghost-dark__color--disabled: #5a5a5a;
--button-ghost-dark__color--hover: #f2f2f2;
--button-ghost-dark__color: #ffffff;
--button-ghost__background-color--active: transparent;
--button-ghost__background-color--disabled: transparent;
--button-ghost__background-color--hover: #ffe400;
--button-ghost__background-color: transparent;
--button-ghost__border-color--active: transparent;
--button-ghost__border-color--disabled: transparent;
--button-ghost__border-color--hover: transparent;
--button-ghost__border-color: transparent;
--button-ghost__color--active: #0d2499;
--button-ghost__color--disabled: #5a5a5a;
--button-ghost__color--hover: #0d2499;
--button-ghost__color: #0d2499;
--button-solid-alt__background-color--active: #e7e9f5;
--button-solid-alt__background-color--disabled: #f2f2f2;
--button-solid-alt__background-color--hover: #ffe400;
--button-solid-alt__background-color: #0d2499;
--button-solid-alt__border-color--active: #0d2499;
--button-solid-alt__border-color--disabled: #d9d9d9;
--button-solid-alt__border-color--hover: #0d2499;
--button-solid-alt__border-color: #0d2499;
--button-solid-alt__color--active: #0d2499;
--button-solid-alt__color--disabled: #5a5a5a;
--button-solid-alt__color--hover: #0d2499;
--button-solid-alt__color: #ffffff;
--button-solid-dark-alt__background-color--active: #42e288;
--button-solid-dark-alt__background-color--disabled: #404040;
--button-solid-dark-alt__background-color--hover: #7bebac;
--button-solid-dark-alt__background-color: #c6f6db;
--button-solid-dark-alt__border-color--active: #42e288;
--button-solid-dark-alt__border-color--disabled: #404040;
--button-solid-dark-alt__border-color--hover: #7bebac;
--button-solid-dark-alt__border-color: #c6f6db;
--button-solid-dark-alt__color--active: #262626;
--button-solid-dark-alt__color--disabled: #262626;
--button-solid-dark-alt__color--hover: #262626;
--button-solid-dark-alt__color: #262626;
--button-solid-dark__background-color--active: #d9d9d9;
--button-solid-dark__background-color--disabled: #404040;
--button-solid-dark__background-color--hover: #f2f2f2;
--button-solid-dark__background-color: #ffffff;
--button-solid-dark__border-color--active: #d9d9d9;
--button-solid-dark__border-color--disabled: #404040;
--button-solid-dark__border-color--hover: #f2f2f2;
--button-solid-dark__border-color: #ffffff;
--button-solid-dark__color--active: #262626;
--button-solid-dark__color--disabled: #262626;
--button-solid-dark__color--hover: #262626;
--button-solid-dark__color: #262626;
--button-solid__background-color--active: #e7e9f5;
--button-solid__background-color--disabled: #f2f2f2;
--button-solid__background-color--hover: #ffe400;
--button-solid__background-color: #0d2499;
--button-solid__border-color--active: #0d2499;
--button-solid__border-color--disabled: #d9d9d9;
--button-solid__border-color--hover: #0d2499;
--button-solid__border-color: #0d2499;
--button-solid__color--active: #0d2499;
--button-solid__color--disabled: #5a5a5a;
--button-solid__color--hover: #0d2499;
--button-solid__color: #ffffff;
--button__background-color--active: #e7e9f5;
--button__background-color--disabled: #f2f2f2;
--button__background-color--hover: #ffe400;
--button__background-color: transparent;
--button__border-color--active: #0d2499;
--button__border-color--disabled: #d9d9d9;
--button__border-color--hover: #0d2499;
--button__border-color: #0d2499;
--button__border-radius: 9999px;
--button__border-width: 2px;
--button__color--active: #07124d;
--button__color--disabled: #5a5a5a;
--button__color--hover: #09196b;
--button__color: #0d2499;
--choice-label__color--disabled--inverse: #e9ecf1;
--choice-label__color--disabled: #5a5a5a;
--choice-label__top-offset: 0.25rem;
--choice-wrapper__gap--small: 0.5rem;
--choice-wrapper__gap: 0.5rem;
--choice__background-color--checked: #0d2499;
--choice__background-color--disabled--inverse: #e9ecf126;
--choice__background-color--disabled: #d9d9d9;
--choice__background-color--inverse: transparent;
--choice__background-color: #ffffff;
--choice__border-color--checked: #0d2499;
--choice__border-color--disabled--inverse: #a6a6a6;
--choice__border-color--disabled: #a6a6a6;
--choice__border-color--error--inverse: #ffffff;
--choice__border-color--error: #262626;
--choice__border-color--focus: #09196b;
--choice__border-color--inverse: #ffffff;
--choice__border-color--left: #0d2499;
--choice__border-color: #262626;
--choice__border-radius: 0px;
--choice__border-width: 2px;
--choice__color--disabled: #5a5a5a;
--choice__color--unchecked: #ffffff;
--choice__size--small: 20px;
--choice__size-radio--small: 12px;
--choice__size-radio: 22px;
--choice__size: 32px;
--color-accent-primary-dark: #e6cd07;
--color-accent-primary-darker: #b3a006;
--color-accent-primary-darkest: #807204;
--color-accent-primary-light: #ffec52;
--color-accent-primary-lighter: #fff7b5;
--color-accent-primary-lightest: #fffce6;
--color-accent-primary: #ffe400;
--color-background-inverse: #07124d;
--color-background: #ffffff;
--color-base-inverse: #ffffff;
--color-base: #262626;
--color-black: #000000;
--color-border-dark: #0f1e38;
--color-border-inverse: #ffffff;
--color-border: #d9d9d9;
--color-error-dark: #cc1937;
--color-error-darker: #9f142b;
--color-error-darkest: #720e1f;
--color-error-light: #f18e9e;
--color-error-lighter: #f7bbc5;
--color-error-lightest: #fef5f7;
--color-error: #e31c3d;
--color-focus-dark: #bd13b8;
--color-focus-light: #ffffff;
--color-gray-dark: #5a5a5a;
--color-gray-darker: #404040;
--color-gray-darkest: #262626;
--color-gray-light: #a6a6a6;
--color-gray-lighter: #d9d9d9;
--color-gray-lightest: #f2f2f2;
--color-gray: #808080;
--color-info-dark: #0c208a;
--color-info-darker: #09196b;
--color-info-darkest: #07124d;
--color-info-light: #5666b8;
--color-info-lighter: #b6bde0;
--color-info-lightest: #e7e9f5;
--color-info: #0d2499;
--color-muted-inverse: #e9ecf1;
--color-muted: #5a5a5a;
--color-primary-dark: #0c208a;
--color-primary-darker: #09196b;
--color-primary-darkest: #07124d;
--color-primary-light: #5666b8;
--color-primary-lighter: #b6bde0;
--color-primary-lightest: #e7e9f5;
--color-primary: #0d2499;
--color-secondary-dark: #3bcb7a;
--color-secondary-darker: #2e9e5f;
--color-secondary-darkest: #217144;
--color-secondary-light: #7bebac;
--color-secondary-lighter: #c6f6db;
--color-secondary-lightest: #ecfcf3;
--color-secondary: #42e288;
--color-success-dark: #107b0d;
--color-success-darker: #0d600a;
--color-success-darkest: #094507;
--color-success-light: #59ac56;
--color-success-lighter: #b8dcb7;
--color-success-lightest: #f6faf5;
--color-success: #12890e;
--color-transparent-black-alpha25: #00000040;
--color-transparent-black-alpha50: #00000080;
--color-transparent-white-alpha25: #ffffff40;
--color-transparent-white-alpha50: #ffffff80;
--color-transparent: transparent;
--color-visited: #5f0a5c;
--color-warn-dark: #e6cd07;
--color-warn-darker: #b3a006;
--color-warn-darkest: #807204;
--color-warn-light: #ffec52;
--color-warn-lighter: #fff7b5;
--color-warn-lightest: #fffce6;
--color-warn: #ffe400;
--color-white: #ffffff;
--date-field__show-separators: 1;
--day-picker-button__background-color--hover: #e7e9f5;
--dialog-overlay__background-color: #00000080;
--dialog__background-color: #ffffff;
--dialog__padding: 32px;
--drawer-close__color: #000000;
--drawer-footer__background-color: #e7e9f5;
--drawer-header__background-color: #f2f2f2;
--drawer-toggle__background-color--hover--inverse: #ffffff;
--drawer-toggle__background-color--hover: #0d2499;
--drawer-toggle__color--hover--inverse: #404040;
--drawer-toggle__color--hover: #ffffff;
--drawer__animation-timing: 300ms;
--drawer__background-color: #ffffff;
--drawer__border-color: #d9d9d9;
--field-max-width--medium: 12rem;
--field-max-width--small: 6rem;
--field-max-width: 460px;
--filter-chip-icon__color-active: #ffffff;
--filter-chip-icon__color: #262626;
--filter-chip__background-color--active: #0d2499;
--filter-chip__background-color: #e7e9f5;
--filter-chip__border-color--active: #0d2499;
--filter-chip__border-color: #0d2499;
--filter-chip__border-radius: 9999px;
--filter-chip__color--active: #ffffff;
--filter-chip__color: #262626;
--font-family-body: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-button: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-heading: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-link: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-line-height-base: 1.5;
--font-line-height-heading: 1.2999999523162842;
--font-line-height-lead: 1.7000000476837158;
--font-line-height-reset: 1;
--font-size-2xl--mobile: 1.5rem;
--font-size-2xl: 1.5rem;
--font-size-3xl--mobile: 1.875rem;
--font-size-3xl: 2.25rem;
--font-size-4xl--mobile: 2.25rem;
--font-size-4xl: 3rem;
--font-size-5xl--mobile: 2.25rem;
--font-size-5xl--tablet: 3rem;
--font-size-5xl: 3.75rem;
--font-size-base: 1rem;
--font-size-lg: 1.125rem;
--font-size-md: 1rem;
--font-size-sm: 0.875rem;
--font-size-xl: 1.3125rem;
--font-weight-body-lg: 400;
--font-weight-body-md: 400;
--font-weight-body-sm: 400;
--font-weight-bold: 700;
--font-weight-button-lg: 700;
--font-weight-button-md: 700;
--font-weight-button-sm: 400;
--font-weight-heading-2xl: 700;
--font-weight-heading-3xl: 400;
--font-weight-heading-4xl: 400;
--font-weight-heading-5xl: 700;
--font-weight-heading-lg: 700;
--font-weight-heading-md: 700;
--font-weight-heading-sm: 400;
--font-weight-heading-xl: 700;
--font-weight-normal: 400;
--global__color--inverse: #ffffff;
--global__color: #262626;
--global__font-family: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--global__font-size: 1rem;
--global__line-height: 1.5;
--grid-columns: 12;
--grid-form-gutter-width: 16px;
--grid-gutter-width: 32px;
--hint__color--inverse: #e9ecf1;
--hint__color: #5a5a5a;
--inline-error__color--inverse: #f18e9e;
--inline-error__color: #e31c3d;
--label__font-family: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--label__font-size: 1rem;
--label__font-weight: 700;
--label__letter-spacing: 0px;
--label__text-transform: inherit;
--link-inverse__color--active: #e9ecf1;
--link-inverse__color--hover: #e9ecf1;
--link-inverse__color--visited: #e9ecf1;
--link-inverse__color: #ffffff;
--link__color--active: #262626;
--link__color--hover: #0d2499;
--link__color--visited: #5f0a5c;
--link__color: #0d2499;
--link__text-decoration-offset: 4px;
--link__text-decoration-thickness--hover: 2.4000000953674316px;
--link__text-decoration-thickness: 2.4000000953674316px;
--measure-base: 65ex;
--measure-narrow: 45ex;
--measure-wide: 80ex;
--media-width-lg: 1024px;
--media-width-md: 768px;
--media-width-sm: 544px;
--media-width-xl: 1280px;
--media-width-xs: 0px;
--pagination-current-page__color: #262626;
--pagination-link__color--active: #07124d;
--pagination-link__color--disabled: #d9d9d9;
--pagination-link__color--focus: #09196b;
--pagination-link__color--hover: #09196b;
--pagination-link__color: #0d2499;
--pagination-overflow__color: #5a5a5a;
--pagination-page-count__color: #5a5a5a;
--radius-circle: 100%;
--radius-default: 3px;
--radius-large: 8px;
--radius-medium: 4px;
--radius-pill: 9999px;
--radius-small: 2px;
--review__border-color: #d9d9d9;
--site-margins-mobile: 1.5rem;
--site-margins: 3rem;
--site-max-width: 1104px;
--spacer-1: 8px;
--spacer-2: 16px;
--spacer-3: 24px;
--spacer-4: 32px;
--spacer-5: 40px;
--spacer-6: 48px;
--spacer-7: 56px;
--spacer-half: 4px;
--spacer-none: 0px;
--spinner__background-color--inverse: #07124d;
--spinner__background-color: #ffffff;
--spinner__color--inverse: #ffffff;
--spinner__color: #262626;
--steplist-step__background-color--completed: #262626;
--steplist-step__border-color--default: #5a5a5a;
--steplist-step__border-color: #d9d9d9;
--steplist-step__color--completed: #262626;
--steplist-step__color--current: #ffffff;
--steplist-step__color: #5a5a5a;
--steplist__background-color--current: #0d2499;
--steplist__color--current: #0d2499;
--steplist__color: #5a5a5a;
--table-header__background-color: #e7e9f5;
--table__background-color--striped: #e7e9f5;
--table__border-color: #d9d9d9;
--table__padding: 16px;
--tabs-panel__background-color: #ffffff;
--tabs__background-color--disabled: #d9d9d9;
--tabs__background-color--hover: #e7e9f5;
--tabs__background-color--selected: #ffffff;
--tabs__background-color: #ffffff;
--tabs__border-color--disabled: #d9d9d9;
--tabs__border-color--selected: #0d2499;
--tabs__border-color: #d9d9d9;
--tabs__color--active: #09196b;
--tabs__color--disabled: #404040;
--tabs__color--hover: #0d2499;
--tabs__color--selected: #0d2499;
--tabs__color: #262626;
--text-input-currency-icon__line-height: 1.2999999523162842;
--text-input-currency-icon__spacing: 20px;
--text-input__background-color--disabled: #d9d9d9;
--text-input__border-color--disabled: #a6a6a6;
--text-input__border-color--error--inverse: #f18e9e;
--text-input__border-color--error: #e31c3d;
--text-input__border-color--inverse: #000000;
--text-input__border-color: #262626;
--text-input__border-radius: 3px;
--text-input__border-width--disabled: 2px;
--text-input__border-width--error: 3px;
--text-input__border-width: 2px;
--text-input__color: #262626;
--text-input__divider-color: #a6a6a6;
--text-input__line-height: 1.2999999523162842;
--text-input__padding: 8px;
--tooltip-icon__color--inverse: #ffffff;
--tooltip-icon__color: #0d2499;
--tooltip-trigger__color: #0d2499;
--tooltip__background-color: #ffffff;
--tooltip__border-color--active: #0d249940;
--tooltip__border-color--inverse-active: #ffffff40;
--tooltip__border-color: #404040;
--tooltip__border-width: 1px;
--tooltip__box-shadow-color: #a6a6a6;
--tooltip__color: #262626;
--usa-banner-close-button__background-color--mobile: #d9d9d9;
--usa-banner-close-button__color--mobile: #0d2499;
--usa-banner-domain-icon__color: #0d2499;
--usa-banner-security-icon__color: #59ac56;
--usa-banner__background-color: #f2f2f2;
--vertical-nav-item__background-color--hover: #f2f2f2;
--vertical-nav-item__border-color: #5a5a5a;
--vertical-nav-item__color--hover: #0d2499;
--vertical-nav-label-icon__color: #262626;
--vertical-nav-label__border-color--current: #0d2499;
--vertical-nav-label__color--current: #0d2499;
--vertical-nav-label__color: #262626;"
`;

exports[`CSS snapshots variables in core-theme.css match snapshot 1`] = `
"--accordion-button__color: #262626;
--accordion-content__background-color: #ffffff;
--accordion__background-color--hover: #d9d9d9;
--accordion__background-color: #f2f2f2;
--accordion__border-bottom-left-radius: 0px;
--accordion__border-bottom-right-radius: 0px;
--accordion__border-color: #f2f2f2;
--accordion__border-top-left-radius: 0px;
--accordion__border-top-right-radius: 0px;
--accordion__border-width: 4px;
--accordion__color: #262626;
--alert-bar__width: 8px;
--alert__background-color--error: #fef5f7;
--alert__background-color--lightweight: #ffffff;
--alert__background-color--success: #f6faf5;
--alert__background-color--warn: #fef9e9;
--alert__background-color: #e6f9fd;
--alert__border-color--error: #e31c3d;
--alert__border-color--success: #12890e;
--alert__border-color--warn: #f8c41f;
--alert__border-left-color: #02bfe7;
--alert__font-color: #262626;
--alert__icon-size: 1.5rem;
--alert__padding: 16px;
--animation-speed-1: 250ms;
--animation-speed-2: 300ms;
--animation-speed-3: 500ms;
--animation-speed-4: 800ms;
--badge__background-color--alert: #e31c3d;
--badge__background-color--info: #0071bc;
--badge__background-color--success: #12890e;
--badge__background-color--warn: #f8c41f;
--badge__background-color: #5a5a5a;
--badge__border-radius: 9999px;
--badge__font-color--alert: #ffffff;
--badge__font-color--info: #ffffff;
--badge__font-color--success: #ffffff;
--badge__font-color--warn: #262626;
--badge__font-color: #ffffff;
--button-alt__background-color--active: #d9d9d9;
--button-alt__background-color--disabled: transparent;
--button-alt__background-color--hover: #f2f2f2;
--button-alt__background-color: transparent;
--button-alt__border-color--active: #094507;
--button-alt__border-color--disabled: #d9d9d9;
--button-alt__border-color--hover: #0d600a;
--button-alt__border-color: #12890e;
--button-alt__color--active: #094507;
--button-alt__color--disabled: #d9d9d9;
--button-alt__color--hover: #0d600a;
--button-alt__color: #12890e;
--button-dark-alt__background-color--active: transparent;
--button-dark-alt__background-color--disabled: transparent;
--button-dark-alt__background-color--hover: transparent;
--button-dark-alt__background-color: transparent;
--button-dark-alt__border-color--active: #59ac56;
--button-dark-alt__border-color--disabled: #5a5a5a;
--button-dark-alt__border-color--hover: #e7f3e7;
--button-dark-alt__border-color: #b8dcb7;
--button-dark-alt__color--active: #59ac56;
--button-dark-alt__color--disabled: #5a5a5a;
--button-dark-alt__color--hover: #e7f3e7;
--button-dark-alt__color: #b8dcb7;
--button-dark__background-color--active: transparent;
--button-dark__background-color--disabled: transparent;
--button-dark__background-color--hover: transparent;
--button-dark__background-color: transparent;
--button-dark__border-color--active: #d9d9d9;
--button-dark__border-color--disabled: #5a5a5a;
--button-dark__border-color--hover: #ffffff;
--button-dark__border-color: #f2f2f2;
--button-dark__color--active: #d9d9d9;
--button-dark__color--disabled: #5a5a5a;
--button-dark__color--hover: #ffffff;
--button-dark__color: #f2f2f2;
--button-ghost-alt__background-color--active: transparent;
--button-ghost-alt__background-color--disabled: transparent;
--button-ghost-alt__background-color--hover: transparent;
--button-ghost-alt__background-color: transparent;
--button-ghost-alt__border-color--active: transparent;
--button-ghost-alt__border-color--disabled: transparent;
--button-ghost-alt__border-color--hover: transparent;
--button-ghost-alt__border-color: transparent;
--button-ghost-alt__color--active: #094507;
--button-ghost-alt__color--disabled: #d9d9d9;
--button-ghost-alt__color--hover: #0d600a;
--button-ghost-alt__color: #12890e;
--button-ghost-dark-alt__background-color--active: transparent;
--button-ghost-dark-alt__background-color--disabled: transparent;
--button-ghost-dark-alt__background-color--hover: transparent;
--button-ghost-dark-alt__background-color: transparent;
--button-ghost-dark-alt__border-color--active: transparent;
--button-ghost-dark-alt__border-color--disabled: transparent;
--button-ghost-dark-alt__border-color--hover: transparent;
--button-ghost-dark-alt__border-color: transparent;
--button-ghost-dark-alt__color--active: #12890e;
--button-ghost-dark-alt__color--disabled: #5a5a5a;
--button-ghost-dark-alt__color--hover: #e7f3e7;
--button-ghost-dark-alt__color: #b8dcb7;
--button-ghost-dark__background-color--active: transparent;
--button-ghost-dark__background-color--disabled: transparent;
--button-ghost-dark__background-color--hover: transparent;
--button-ghost-dark__background-color: transparent;
--button-ghost-dark__border-color--active: transparent;
--button-ghost-dark__border-color--disabled: transparent;
--button-ghost-dark__border-color--hover: transparent;
--button-ghost-dark__border-color: transparent;
--button-ghost-dark__color--active: #d9d9d9;
--button-ghost-dark__color--disabled: #5a5a5a;
--button-ghost-dark__color--hover: #ffffff;
--button-ghost-dark__color: #f2f2f2;
--button-ghost__background-color--active: transparent;
--button-ghost__background-color--disabled: transparent;
--button-ghost__background-color--hover: transparent;
--button-ghost__background-color: transparent;
--button-ghost__border-color--active: transparent;
--button-ghost__border-color--disabled: transparent;
--button-ghost__border-color--hover: transparent;
--button-ghost__border-color: transparent;
--button-ghost__color--active: #00395e;
--button-ghost__color--disabled: #d9d9d9;
--button-ghost__color--hover: #004f84;
--button-ghost__color: #0071bc;
--button-solid-alt__background-color--active: #094507;
--button-solid-alt__background-color--disabled: #d9d9d9;
--button-solid-alt__background-color--hover: #0d600a;
--button-solid-alt__background-color: #12890e;
--button-solid-alt__border-color--active: #094507;
--button-solid-alt__border-color--disabled: #d9d9d9;
--button-solid-alt__border-color--hover: #0d600a;
--button-solid-alt__border-color: #12890e;
--button-solid-alt__color--active: #ffffff;
--button-solid-alt__color--disabled: #404040;
--button-solid-alt__color--hover: #ffffff;
--button-solid-alt__color: #ffffff;
--button-solid-dark-alt__background-color--active: #12890e;
--button-solid-dark-alt__background-color--disabled: #404040;
--button-solid-dark-alt__background-color--hover: #e7f3e7;
--button-solid-dark-alt__background-color: #b8dcb7;
--button-solid-dark-alt__border-color--active: #12890e;
--button-solid-dark-alt__border-color--disabled: #404040;
--button-solid-dark-alt__border-color--hover: #e7f3e7;
--button-solid-dark-alt__border-color: #b8dcb7;
--button-solid-dark-alt__color--active: #262626;
--button-solid-dark-alt__color--disabled: #262626;
--button-solid-dark-alt__color--hover: #262626;
--button-solid-dark-alt__color: #262626;
--button-solid-dark__background-color--active: #d9d9d9;
--button-solid-dark__background-color--disabled: #404040;
--button-solid-dark__background-color--hover: #ffffff;
--button-solid-dark__background-color: #f2f2f2;
--button-solid-dark__border-color--active: #d9d9d9;
--button-solid-dark__border-color--disabled: #404040;
--button-solid-dark__border-color--hover: #ffffff;
--button-solid-dark__border-color: #f2f2f2;
--button-solid-dark__color--active: #262626;
--button-solid-dark__color--disabled: #262626;
--button-solid-dark__color--hover: #262626;
--button-solid-dark__color: #262626;
--button-solid__background-color--active: #00395e;
--button-solid__background-color--disabled: #d9d9d9;
--button-solid__background-color--hover: #004f84;
--button-solid__background-color: #0071bc;
--button-solid__border-color--active: #00395e;
--button-solid__border-color--disabled: #d9d9d9;
--button-solid__border-color--hover: #004f84;
--button-solid__border-color: #0071bc;
--button-solid__color--active: #ffffff;
--button-solid__color--disabled: #404040;
--button-solid__color--hover: #ffffff;
--button-solid__color: #ffffff;
--button__background-color--active: #d9d9d9;
--button__background-color--disabled: transparent;
--button__background-color--hover: #f2f2f2;
--button__background-color: transparent;
--button__border-color--active: #00395e;
--button__border-color--disabled: #d9d9d9;
--button__border-color--hover: #004f84;
--button__border-color: #0071bc;
--button__border-radius: 3px;
--button__border-width: 1px;
--button__color--active: #00395e;
--button__color--disabled: #d9d9d9;
--button__color--hover: #004f84;
--button__color: #0071bc;
--choice-label__color--disabled--inverse: #e9ecf1;
--choice-label__color--disabled: #5a5a5a;
--choice-label__top-offset: 0.25rem;
--choice-wrapper__gap--small: 0.5rem;
--choice-wrapper__gap: 0.5rem;
--choice__background-color--checked: #0071bc;
--choice__background-color--disabled--inverse: #e9ecf126;
--choice__background-color--disabled: #d9d9d9;
--choice__background-color--inverse: transparent;
--choice__background-color: #ffffff;
--choice__border-color--checked: #0071bc;
--choice__border-color--disabled--inverse: #a6a6a6;
--choice__border-color--disabled: #a6a6a6;
--choice__border-color--error--inverse: #ffffff;
--choice__border-color--error: #262626;
--choice__border-color--focus: #004f84;
--choice__border-color--inverse: #ffffff;
--choice__border-color--left: #0071bc;
--choice__border-color: #262626;
--choice__border-radius: 0px;
--choice__border-width: 2px;
--choice__color--disabled: #5a5a5a;
--choice__color--unchecked: #ffffff;
--choice__size--small: 20px;
--choice__size-radio--small: 12px;
--choice__size-radio: 22px;
--choice__size: 32px;
--color-accent-primary-dark: #c73103;
--color-accent-primary-darker: #9b2602;
--color-accent-primary-darkest: #6f1b02;
--color-accent-primary-light: #e7724f;
--color-accent-primary-lighter: #f5c3b3;
--color-accent-primary-lightest: #fcebe6;
--color-accent-primary: #dd3603;
--color-background-inverse: #00395e;
--color-background: #ffffff;
--color-base-inverse: #ffffff;
--color-base: #262626;
--color-black: #000000;
--color-border-dark: #0f1e38;
--color-border-inverse: #ffffff;
--color-border: #d9d9d9;
--color-error-dark: #cc1937;
--color-error-darker: #9f142b;
--color-error-darkest: #720e1f;
--color-error-light: #eb6077;
--color-error-lighter: #f7bbc5;
--color-error-lightest: #fef5f7;
--color-error: #e31c3d;
--color-focus-dark: #bd13b8;
--color-focus-light: #ffffff;
--color-gray-dark: #5a5a5a;
--color-gray-darker: #404040;
--color-gray-darkest: #262626;
--color-gray-light: #a6a6a6;
--color-gray-lighter: #d9d9d9;
--color-gray-lightest: #f2f2f2;
--color-gray: #808080;
--color-info-dark: #02acd0;
--color-info-darker: #0186a2;
--color-info-darkest: #016074;
--color-info-light: #4ed2ee;
--color-info-lighter: #b3ecf8;
--color-info-lightest: #e6f9fd;
--color-info: #02bfe7;
--color-muted-inverse: #e9ecf1;
--color-muted: #5a5a5a;
--color-primary-dark: #0066a9;
--color-primary-darker: #004f84;
--color-primary-darkest: #00395e;
--color-primary-light: #4d9cd0;
--color-primary-lighter: #b3d4eb;
--color-primary-lightest: #e6f1f8;
--color-primary: #0071bc;
--color-secondary-dark: #107b0d;
--color-secondary-darker: #0d600a;
--color-secondary-darkest: #094507;
--color-secondary-light: #59ac56;
--color-secondary-lighter: #b8dcb7;
--color-secondary-lightest: #e7f3e7;
--color-secondary: #12890e;
--color-success-dark: #107b0d;
--color-success-darker: #0d600a;
--color-success-darkest: #094507;
--color-success-light: #59ac56;
--color-success-lighter: #b8dcb7;
--color-success-lightest: #f6faf5;
--color-success: #12890e;
--color-transparent-black-alpha25: #00000040;
--color-transparent-black-alpha50: #00000080;
--color-transparent-white-alpha25: #ffffff40;
--color-transparent-white-alpha50: #ffffff80;
--color-transparent: transparent;
--color-visited: #4c2c92;
--color-warn-dark: #dfb01c;
--color-warn-darker: #ae8916;
--color-warn-darkest: #7c6210;
--color-warn-light: #fad662;
--color-warn-lighter: #fdedbc;
--color-warn-lightest: #fef9e9;
--color-warn: #f8c41f;
--color-white: #ffffff;
--date-field__show-separators: 1;
--day-picker-button__background-color--hover: #e6f1f8;
--dialog-overlay__background-color: #00000080;
--dialog__background-color: #ffffff;
--dialog__padding: 32px;
--drawer-close__color: #000000;
--drawer-footer__background-color: #e6f9fd;
--drawer-header__background-color: #f2f2f2;
--drawer-toggle__background-color--hover--inverse: #ffffff;
--drawer-toggle__background-color--hover: #02bfe7;
--drawer-toggle__color--hover--inverse: #404040;
--drawer-toggle__color--hover: #ffffff;
--drawer__animation-timing: 300ms;
--drawer__background-color: #ffffff;
--drawer__border-color: #d9d9d9;
--field-max-width--medium: 12rem;
--field-max-width--small: 6rem;
--field-max-width: 460px;
--filter-chip-icon__color-active: #ffffff;
--filter-chip-icon__color: #262626;
--filter-chip__background-color--active: #0071bc;
--filter-chip__background-color: #e6f1f8;
--filter-chip__border-color--active: #0071bc;
--filter-chip__border-color: #0071bc;
--filter-chip__border-radius: 9999px;
--filter-chip__color--active: #ffffff;
--filter-chip__color: #262626;
--font-family-body: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-button: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-heading: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-link: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-line-height-base: 1.5;
--font-line-height-heading: 1.2999999523162842;
--font-line-height-lead: 1.7000000476837158;
--font-line-height-reset: 1;
--font-size-2xl--mobile: 1.5rem;
--font-size-2xl: 1.5rem;
--font-size-3xl--mobile: 1.875rem;
--font-size-3xl: 2.25rem;
--font-size-4xl--mobile: 2.25rem;
--font-size-4xl: 3rem;
--font-size-5xl--mobile: 2.25rem;
--font-size-5xl--tablet: 3rem;
--font-size-5xl: 3.75rem;
--font-size-base: 1rem;
--font-size-lg: 1.125rem;
--font-size-md: 1rem;
--font-size-sm: 0.875rem;
--font-size-xl: 1.3125rem;
--font-weight-body-lg: 400;
--font-weight-body-md: 400;
--font-weight-body-sm: 400;
--font-weight-bold: 700;
--font-weight-button-lg: 700;
--font-weight-button-md: 700;
--font-weight-button-sm: 400;
--font-weight-heading-2xl: 700;
--font-weight-heading-3xl: 400;
--font-weight-heading-4xl: 400;
--font-weight-heading-5xl: 700;
--font-weight-heading-lg: 700;
--font-weight-heading-md: 700;
--font-weight-heading-sm: 400;
--font-weight-heading-xl: 700;
--font-weight-normal: 400;
--global__color--inverse: #ffffff;
--global__color: #262626;
--global__font-family: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--global__font-size: 1rem;
--global__line-height: 1.5;
--grid-columns: 12;
--grid-form-gutter-width: 16px;
--grid-gutter-width: 32px;
--hint__color--inverse: #e9ecf1;
--hint__color: #5a5a5a;
--inline-error__color--inverse: #f7bbc5;
--inline-error__color: #e31c3d;
--label__font-family: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--label__font-size: 1rem;
--label__font-weight: 700;
--label__letter-spacing: 0px;
--label__text-transform: inherit;
--link-inverse__color--active: #e9ecf1;
--link-inverse__color--hover: #e9ecf1;
--link-inverse__color--visited: #e9ecf1;
--link-inverse__color: #ffffff;
--link__color--active: #00395e;
--link__color--hover: #004f84;
--link__color--visited: #4c2c92;
--link__color: #0071bc;
--link__text-decoration-offset: 0.0390625rem;
--link__text-decoration-thickness--hover: 0.0625rem;
--link__text-decoration-thickness: 0.0625rem;
--measure-base: 65ex;
--measure-narrow: 45ex;
--measure-wide: 80ex;
--media-width-lg: 1024px;
--media-width-md: 768px;
--media-width-sm: 544px;
--media-width-xl: 1280px;
--media-width-xs: 0px;
--pagination-current-page__color: #262626;
--pagination-link__color--active: #00395e;
--pagination-link__color--disabled: #d9d9d9;
--pagination-link__color--focus: #004f84;
--pagination-link__color--hover: #004f84;
--pagination-link__color: #0071bc;
--pagination-overflow__color: #5a5a5a;
--pagination-page-count__color: #5a5a5a;
--radius-circle: 100%;
--radius-default: 3px;
--radius-large: 8px;
--radius-medium: 4px;
--radius-pill: 9999px;
--radius-small: 2px;
--review__border-color: #d9d9d9;
--site-margins-mobile: 1.5rem;
--site-margins: 3rem;
--site-max-width: 1104px;
--spacer-1: 8px;
--spacer-2: 16px;
--spacer-3: 24px;
--spacer-4: 32px;
--spacer-5: 40px;
--spacer-6: 48px;
--spacer-7: 56px;
--spacer-half: 4px;
--spacer-none: 0px;
--spinner__background-color--inverse: #00395e;
--spinner__background-color: #ffffff;
--spinner__color--inverse: #ffffff;
--spinner__color: #262626;
--steplist-step__background-color--completed: #262626;
--steplist-step__border-color--default: #5a5a5a;
--steplist-step__border-color: #d9d9d9;
--steplist-step__color--completed: #262626;
--steplist-step__color--current: #ffffff;
--steplist-step__color: #5a5a5a;
--steplist__background-color--current: #0071bc;
--steplist__color--current: #0071bc;
--steplist__color: #5a5a5a;
--table-header__background-color: #f2f2f2;
--table__background-color--striped: #f2f2f2;
--table__border-color: #000000;
--table__padding: 16px;
--tabs-panel__background-color: #ffffff;
--tabs__background-color--disabled: #d9d9d9;
--tabs__background-color--hover: #ffffff;
--tabs__background-color--selected: #ffffff;
--tabs__background-color: #ffffff;
--tabs__border-color--disabled: #d9d9d9;
--tabs__border-color--selected: #0071bc;
--tabs__border-color: #d9d9d9;
--tabs__color--active: #004f84;
--tabs__color--disabled: #404040;
--tabs__color--hover: #0071bc;
--tabs__color--selected: #0071bc;
--tabs__color: #262626;
--text-input-currency-icon__line-height: 1.2999999523162842;
--text-input-currency-icon__spacing: 20px;
--text-input__background-color--disabled: #d9d9d9;
--text-input__border-color--disabled: #a6a6a6;
--text-input__border-color--error--inverse: #f7bbc5;
--text-input__border-color--error: #e31c3d;
--text-input__border-color--inverse: #000000;
--text-input__border-color: #262626;
--text-input__border-radius: 3px;
--text-input__border-width--disabled: 2px;
--text-input__border-width--error: 3px;
--text-input__border-width: 2px;
--text-input__color: #262626;
--text-input__divider-color: #a6a6a6;
--text-input__line-height: 1.2999999523162842;
--text-input__padding: 8px;
--tooltip-icon__color--inverse: #ffffff;
--tooltip-icon__color: #0071bc;
--tooltip-trigger__color: #0071bc;
--tooltip__background-color: #ffffff;
--tooltip__border-color--active: #0071bc40;
--tooltip__border-color--inverse-active: #ffffff40;
--tooltip__border-color: #404040;
--tooltip__border-width: 1px;
--tooltip__box-shadow-color: #a6a6a6;
--tooltip__color: #262626;
--usa-banner-close-button__background-color--mobile: #d9d9d9;
--usa-banner-close-button__color--mobile: #0071bc;
--usa-banner-domain-icon__color: #0071bc;
--usa-banner-security-icon__color: #59ac56;
--usa-banner__background-color: #f2f2f2;
--vertical-nav-item__background-color--hover: #f2f2f2;
--vertical-nav-item__border-color: #5a5a5a;
--vertical-nav-item__color--hover: #0071bc;
--vertical-nav-label-icon__color: #262626;
--vertical-nav-label__border-color--current: #0071bc;
--vertical-nav-label__color--current: #0071bc;
--vertical-nav-label__color: #262626;"
`;

exports[`CSS snapshots variables in healthcare-theme.css match snapshot 1`] = `
"--accordion-button__color: #046791;
--accordion-content__background-color: transparent;
--accordion__background-color--hover: transparent;
--accordion__background-color: transparent;
--accordion__border-bottom-left-radius: 0px;
--accordion__border-bottom-right-radius: 0px;
--accordion__border-color: transparent;
--accordion__border-top-left-radius: 0px;
--accordion__border-top-right-radius: 0px;
--accordion__border-width: 4px;
--accordion__color: #262626;
--alert-bar__width: 8px;
--alert__background-color--error: #fef5f7;
--alert__background-color--lightweight: #ffffff;
--alert__background-color--success: #f6faf5;
--alert__background-color--warn: #fef9e9;
--alert__background-color: #ecf4fa;
--alert__border-color--error: #e31c3d;
--alert__border-color--success: #12890e;
--alert__border-color--warn: #f8c41f;
--alert__border-left-color: #3e94cf;
--alert__font-color: #262626;
--alert__icon-size: 1.5rem;
--alert__padding: 16px;
--animation-speed-1: 250ms;
--animation-speed-2: 300ms;
--animation-speed-3: 500ms;
--animation-speed-4: 800ms;
--badge__background-color--alert: #e31c3d;
--badge__background-color--info: #046791;
--badge__background-color--success: #12890e;
--badge__background-color--warn: #f8c41f;
--badge__background-color: #5a5a5a;
--badge__border-radius: 9999px;
--badge__font-color--alert: #ffffff;
--badge__font-color--info: #ffffff;
--badge__font-color--success: #ffffff;
--badge__font-color--warn: #262626;
--badge__font-color: #ffffff;
--button-alt__background-color--active: #023449;
--button-alt__background-color--disabled: #ffffff;
--button-alt__background-color--hover: #046791;
--button-alt__background-color: #ffffff;
--button-alt__border-color--active: #023449;
--button-alt__border-color--disabled: #d9d9d9;
--button-alt__border-color--hover: #046791;
--button-alt__border-color: #046791;
--button-alt__color--active: #ffffff;
--button-alt__color--disabled: #d9d9d9;
--button-alt__color--hover: #ffffff;
--button-alt__color: #046791;
--button-dark-alt__background-color--active: transparent;
--button-dark-alt__background-color--disabled: transparent;
--button-dark-alt__background-color--hover: transparent;
--button-dark-alt__background-color: transparent;
--button-dark-alt__border-color--active: #d9d9d9;
--button-dark-alt__border-color--disabled: #5a5a5a;
--button-dark-alt__border-color--hover: #f2f2f2;
--button-dark-alt__border-color: #ffffff;
--button-dark-alt__color--active: #d9d9d9;
--button-dark-alt__color--disabled: #5a5a5a;
--button-dark-alt__color--hover: #f2f2f2;
--button-dark-alt__color: #ffffff;
--button-dark__background-color--active: transparent;
--button-dark__background-color--disabled: transparent;
--button-dark__background-color--hover: transparent;
--button-dark__background-color: transparent;
--button-dark__border-color--active: #d9d9d9;
--button-dark__border-color--disabled: #5a5a5a;
--button-dark__border-color--hover: #f2f2f2;
--button-dark__border-color: #ffffff;
--button-dark__color--active: #d9d9d9;
--button-dark__color--disabled: #5a5a5a;
--button-dark__color--hover: #f2f2f2;
--button-dark__color: #ffffff;
--button-ghost-alt__background-color--active: transparent;
--button-ghost-alt__background-color--disabled: transparent;
--button-ghost-alt__background-color--hover: transparent;
--button-ghost-alt__background-color: transparent;
--button-ghost-alt__border-color--active: transparent;
--button-ghost-alt__border-color--disabled: transparent;
--button-ghost-alt__border-color--hover: transparent;
--button-ghost-alt__border-color: transparent;
--button-ghost-alt__color--active: #023449;
--button-ghost-alt__color--disabled: #d9d9d9;
--button-ghost-alt__color--hover: #034866;
--button-ghost-alt__color: #046791;
--button-ghost-dark-alt__background-color--active: transparent;
--button-ghost-dark-alt__background-color--disabled: transparent;
--button-ghost-dark-alt__background-color--hover: transparent;
--button-ghost-dark-alt__background-color: transparent;
--button-ghost-dark-alt__border-color--active: transparent;
--button-ghost-dark-alt__border-color--disabled: transparent;
--button-ghost-dark-alt__border-color--hover: transparent;
--button-ghost-dark-alt__border-color: transparent;
--button-ghost-dark-alt__color--active: #d9d9d9;
--button-ghost-dark-alt__color--disabled: #5a5a5a;
--button-ghost-dark-alt__color--hover: #f2f2f2;
--button-ghost-dark-alt__color: #ffffff;
--button-ghost-dark__background-color--active: transparent;
--button-ghost-dark__background-color--disabled: transparent;
--button-ghost-dark__background-color--hover: transparent;
--button-ghost-dark__background-color: transparent;
--button-ghost-dark__border-color--active: transparent;
--button-ghost-dark__border-color--disabled: transparent;
--button-ghost-dark__border-color--hover: transparent;
--button-ghost-dark__border-color: transparent;
--button-ghost-dark__color--active: #d9d9d9;
--button-ghost-dark__color--disabled: #5a5a5a;
--button-ghost-dark__color--hover: #f2f2f2;
--button-ghost-dark__color: #ffffff;
--button-ghost__background-color--active: transparent;
--button-ghost__background-color--disabled: transparent;
--button-ghost__background-color--hover: transparent;
--button-ghost__background-color: transparent;
--button-ghost__border-color--active: transparent;
--button-ghost__border-color--disabled: transparent;
--button-ghost__border-color--hover: transparent;
--button-ghost__border-color: transparent;
--button-ghost__color--active: #023449;
--button-ghost__color--disabled: #d9d9d9;
--button-ghost__color--hover: #034866;
--button-ghost__color: #046791;
--button-solid-alt__background-color--active: #023449;
--button-solid-alt__background-color--disabled: #d9d9d9;
--button-solid-alt__background-color--hover: #034866;
--button-solid-alt__background-color: #046791;
--button-solid-alt__border-color--active: #023449;
--button-solid-alt__border-color--disabled: #d9d9d9;
--button-solid-alt__border-color--hover: #034866;
--button-solid-alt__border-color: #046791;
--button-solid-alt__color--active: #ffffff;
--button-solid-alt__color--disabled: #404040;
--button-solid-alt__color--hover: #ffffff;
--button-solid-alt__color: #ffffff;
--button-solid-dark-alt__background-color--active: #046791;
--button-solid-dark-alt__background-color--disabled: #404040;
--button-solid-dark-alt__background-color--hover: #4f95b2;
--button-solid-dark-alt__background-color: #b4d1de;
--button-solid-dark-alt__border-color--active: #046791;
--button-solid-dark-alt__border-color--disabled: #404040;
--button-solid-dark-alt__border-color--hover: #4f95b2;
--button-solid-dark-alt__border-color: #b4d1de;
--button-solid-dark-alt__color--active: #262626;
--button-solid-dark-alt__color--disabled: #262626;
--button-solid-dark-alt__color--hover: #262626;
--button-solid-dark-alt__color: #262626;
--button-solid-dark__background-color--active: #d9d9d9;
--button-solid-dark__background-color--disabled: #404040;
--button-solid-dark__background-color--hover: #f2f2f2;
--button-solid-dark__background-color: #ffffff;
--button-solid-dark__border-color--active: #d9d9d9;
--button-solid-dark__border-color--disabled: #404040;
--button-solid-dark__border-color--hover: #f2f2f2;
--button-solid-dark__border-color: #ffffff;
--button-solid-dark__color--active: #262626;
--button-solid-dark__color--disabled: #262626;
--button-solid-dark__color--hover: #262626;
--button-solid-dark__color: #262626;
--button-solid__background-color--active: #094507;
--button-solid__background-color--disabled: #d9d9d9;
--button-solid__background-color--hover: #0d600a;
--button-solid__background-color: #12890e;
--button-solid__border-color--active: #094507;
--button-solid__border-color--disabled: #d9d9d9;
--button-solid__border-color--hover: #0d600a;
--button-solid__border-color: #12890e;
--button-solid__color--active: #ffffff;
--button-solid__color--disabled: #404040;
--button-solid__color--hover: #ffffff;
--button-solid__color: #ffffff;
--button__background-color--active: #023449;
--button__background-color--disabled: #ffffff;
--button__background-color--hover: #046791;
--button__background-color: #ffffff;
--button__border-color--active: #023449;
--button__border-color--disabled: #d9d9d9;
--button__border-color--hover: #046791;
--button__border-color: #046791;
--button__border-radius: 3px;
--button__border-width: 2px;
--button__color--active: #ffffff;
--button__color--disabled: #d9d9d9;
--button__color--hover: #ffffff;
--button__color: #046791;
--choice-label__color--disabled--inverse: #e9ecf1;
--choice-label__color--disabled: #5a5a5a;
--choice-label__top-offset: 0.25rem;
--choice-wrapper__gap--small: 0.5rem;
--choice-wrapper__gap: 0.5rem;
--choice__background-color--checked: #046791;
--choice__background-color--disabled--inverse: #e9ecf126;
--choice__background-color--disabled: #d9d9d9;
--choice__background-color--inverse: transparent;
--choice__background-color: #ffffff;
--choice__border-color--checked: #046791;
--choice__border-color--disabled--inverse: #a6a6a6;
--choice__border-color--disabled: #a6a6a6;
--choice__border-color--error--inverse: #ffffff;
--choice__border-color--error: #262626;
--choice__border-color--focus: #034866;
--choice__border-color--inverse: #ffffff;
--choice__border-color--left: #046791;
--choice__border-color: #262626;
--choice__border-radius: 0px;
--choice__border-width: 2px;
--choice__color--disabled: #5a5a5a;
--choice__color--unchecked: #ffffff;
--choice__size--small: 20px;
--choice__size-radio--small: 12px;
--choice__size-radio: 22px;
--choice__size: 32px;
--color-accent-primary-dark: #c73103;
--color-accent-primary-darker: #9b2602;
--color-accent-primary-darkest: #6f1b02;
--color-accent-primary-light: #e7724f;
--color-accent-primary-lighter: #f5c3b3;
--color-accent-primary-lightest: #fcebe6;
--color-accent-primary: #dd3603;
--color-background-inverse: #00395e;
--color-background: #ffffff;
--color-base-inverse: #ffffff;
--color-base: #262626;
--color-black: #000000;
--color-border-dark: #0f1e38;
--color-border-inverse: #ffffff;
--color-border: #d9d9d9;
--color-error-dark: #cc1937;
--color-error-darker: #9f142b;
--color-error-darkest: #720e1f;
--color-error-light: #eb6077;
--color-error-lighter: #f7bbc5;
--color-error-lightest: #fef5f7;
--color-error: #e31c3d;
--color-focus-dark: #dd3603;
--color-focus-light: #ffffff;
--color-gray-dark: #5a5a5a;
--color-gray-darker: #404040;
--color-gray-darkest: #262626;
--color-gray-light: #a6a6a6;
--color-gray-lighter: #d9d9d9;
--color-gray-lightest: #f2f2f2;
--color-gray: #808080;
--color-info-dark: #3885ba;
--color-info-darker: #2b6891;
--color-info-darkest: #1f4a68;
--color-info-light: #78b4dd;
--color-info-lighter: #c5dff1;
--color-info-lightest: #ecf4fa;
--color-info: #3e94cf;
--color-muted-inverse: #e9ecf1;
--color-muted: #5a5a5a;
--color-primary-dark: #045d83;
--color-primary-darker: #034866;
--color-primary-darkest: #023449;
--color-primary-light: #4f95b2;
--color-primary-lighter: #b4d1de;
--color-primary-lightest: #e6f0f4;
--color-primary: #046791;
--color-secondary-dark: #107b0d;
--color-secondary-darker: #0d600a;
--color-secondary-darkest: #094507;
--color-secondary-light: #59ac56;
--color-secondary-lighter: #b8dcb7;
--color-secondary-lightest: #e7f3e7;
--color-secondary: #12890e;
--color-success-dark: #107b0d;
--color-success-darker: #0d600a;
--color-success-darkest: #094507;
--color-success-light: #59ac56;
--color-success-lighter: #b8dcb7;
--color-success-lightest: #f6faf5;
--color-success: #12890e;
--color-transparent-black-alpha25: #00000040;
--color-transparent-black-alpha50: #00000080;
--color-transparent-white-alpha25: #ffffff40;
--color-transparent-white-alpha50: #ffffff80;
--color-transparent: transparent;
--color-visited: #4c2c92;
--color-warn-dark: #dfb01c;
--color-warn-darker: #ae8916;
--color-warn-darkest: #7c6210;
--color-warn-light: #fad662;
--color-warn-lighter: #fdedbc;
--color-warn-lightest: #fef9e9;
--color-warn: #f8c41f;
--color-white: #ffffff;
--date-field__show-separators: 1;
--day-picker-button__background-color--hover: #e6f0f4;
--dialog-overlay__background-color: #00000080;
--dialog__background-color: #ffffff;
--dialog__padding: 32px;
--drawer-close__color: #000000;
--drawer-footer__background-color: #ecf4fa;
--drawer-header__background-color: #f2f2f2;
--drawer-toggle__background-color--hover--inverse: #ffffff;
--drawer-toggle__background-color--hover: #3e94cf;
--drawer-toggle__color--hover--inverse: #404040;
--drawer-toggle__color--hover: #ffffff;
--drawer__animation-timing: 300ms;
--drawer__background-color: #ffffff;
--drawer__border-color: #d9d9d9;
--field-max-width--medium: 12rem;
--field-max-width--small: 6rem;
--field-max-width: 460px;
--filter-chip-icon__color-active: #ffffff;
--filter-chip-icon__color: #262626;
--filter-chip__background-color--active: #046791;
--filter-chip__background-color: #e6f0f4;
--filter-chip__border-color--active: #046791;
--filter-chip__border-color: #046791;
--filter-chip__border-radius: 9999px;
--filter-chip__color--active: #ffffff;
--filter-chip__color: #262626;
--font-family-body: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-button: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-heading: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-family-link: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--font-line-height-base: 1.5;
--font-line-height-heading: 1.2999999523162842;
--font-line-height-lead: 1.7000000476837158;
--font-line-height-reset: 1;
--font-size-2xl--mobile: 1.5rem;
--font-size-2xl: 1.5rem;
--font-size-3xl--mobile: 1.875rem;
--font-size-3xl: 2.25rem;
--font-size-4xl--mobile: 2.25rem;
--font-size-4xl: 3rem;
--font-size-5xl--mobile: 2.25rem;
--font-size-5xl--tablet: 3rem;
--font-size-5xl: 3.75rem;
--font-size-base: 1rem;
--font-size-lg: 1.125rem;
--font-size-md: 1rem;
--font-size-sm: 0.875rem;
--font-size-xl: 1.3125rem;
--font-weight-body-lg: 400;
--font-weight-body-md: 400;
--font-weight-body-sm: 400;
--font-weight-bold: 700;
--font-weight-button-lg: 700;
--font-weight-button-md: 700;
--font-weight-button-sm: 400;
--font-weight-heading-2xl: 700;
--font-weight-heading-3xl: 400;
--font-weight-heading-4xl: 400;
--font-weight-heading-5xl: 700;
--font-weight-heading-lg: 700;
--font-weight-heading-md: 700;
--font-weight-heading-sm: 400;
--font-weight-heading-xl: 700;
--font-weight-normal: 400;
--global__color--inverse: #ffffff;
--global__color: #262626;
--global__font-family: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--global__font-size: 1rem;
--global__line-height: 1.5;
--grid-columns: 12;
--grid-form-gutter-width: 16px;
--grid-gutter-width: 32px;
--hint__color--inverse: #e9ecf1;
--hint__color: #5a5a5a;
--inline-error__color--inverse: #f7bbc5;
--inline-error__color: #e31c3d;
--label__font-family: 'Open Sans', 'Inter', 'Roboto', 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', 'Arial', 'sans-serif';
--label__font-size: 1rem;
--label__font-weight: 700;
--label__letter-spacing: 0px;
--label__text-transform: inherit;
--link-inverse__color--active: #e9ecf1;
--link-inverse__color--hover: #e9ecf1;
--link-inverse__color--visited: #e9ecf1;
--link-inverse__color: #ffffff;
--link__color--active: #023449;
--link__color--hover: #034866;
--link__color--visited: #4c2c92;
--link__color: #046791;
--link__text-decoration-offset: 0.0390625rem;
--link__text-decoration-thickness--hover: 0.0625rem;
--link__text-decoration-thickness: 0.0625rem;
--measure-base: 65ex;
--measure-narrow: 45ex;
--measure-wide: 80ex;
--media-width-lg: 1024px;
--media-width-md: 768px;
--media-width-sm: 544px;
--media-width-xl: 1280px;
--media-width-xs: 0px;
--pagination-current-page__color: #262626;
--pagination-link__color--active: #023449;
--pagination-link__color--disabled: #d9d9d9;
--pagination-link__color--focus: #034866;
--pagination-link__color--hover: #034866;
--pagination-link__color: #046791;
--pagination-overflow__color: #5a5a5a;
--pagination-page-count__color: #5a5a5a;
--radius-circle: 100%;
--radius-default: 3px;
--radius-large: 8px;
--radius-medium: 4px;
--radius-pill: 9999px;
--radius-small: 2px;
--review__border-color: #d9d9d9;
--site-margins-mobile: 1.5rem;
--site-margins: 3rem;
--site-max-width: 1104px;
--spacer-1: 8px;
--spacer-2: 16px;
--spacer-3: 24px;
--spacer-4: 32px;
--spacer-5: 40px;
--spacer-6: 48px;
--spacer-7: 56px;
--spacer-half: 4px;
--spacer-none: 0px;
--spinner__background-color--inverse: #00395e;
--spinner__background-color: #ffffff;
--spinner__color--inverse: #ffffff;
--spinner__color: #262626;
--steplist-step__background-color--completed: #262626;
--steplist-step__border-color--default: #5a5a5a;
--steplist-step__border-color: #d9d9d9;
--steplist-step__color--completed: #262626;
--steplist-step__color--current: #ffffff;
--steplist-step__color: #5a5a5a;
--steplist__background-color--current: #046791;
--steplist__color--current: #046791;
--steplist__color: #5a5a5a;
--table-header__background-color: #f2f2f2;
--table__background-color--striped: #f2f2f2;
--table__border-color: #000000;
--table__padding: 16px;
--tabs-panel__background-color: #ffffff;
--tabs__background-color--disabled: #d9d9d9;
--tabs__background-color--hover: #ffffff;
--tabs__background-color--selected: #ffffff;
--tabs__background-color: #ffffff;
--tabs__border-color--disabled: #d9d9d9;
--tabs__border-color--selected: #046791;
--tabs__border-color: #d9d9d9;
--tabs__color--active: #034866;
--tabs__color--disabled: #404040;
--tabs__color--hover: #046791;
--tabs__color--selected: #046791;
--tabs__color: #262626;
--text-input-currency-icon__line-height: 1.2999999523162842;
--text-input-currency-icon__spacing: 20px;
--text-input__background-color--disabled: #d9d9d9;
--text-input__border-color--disabled: #a6a6a6;
--text-input__border-color--error--inverse: #eb6077;
--text-input__border-color--error: #e31c3d;
--text-input__border-color--inverse: #000000;
--text-input__border-color: #262626;
--text-input__border-radius: 0px;
--text-input__border-width--disabled: 2px;
--text-input__border-width--error: 3px;
--text-input__border-width: 2px;
--text-input__color: #262626;
--text-input__divider-color: #a6a6a6;
--text-input__line-height: 1.2999999523162842;
--text-input__padding: 8px;
--tooltip-icon__color--inverse: #ffffff;
--tooltip-icon__color: #046791;
--tooltip-trigger__color: #046791;
--tooltip__background-color: #ffffff;
--tooltip__border-color--active: #04679140;
--tooltip__border-color--inverse-active: #ffffff40;
--tooltip__border-color: #404040;
--tooltip__border-width: 1px;
--tooltip__box-shadow-color: #a6a6a6;
--tooltip__color: #262626;
--usa-banner-close-button__background-color--mobile: #d9d9d9;
--usa-banner-close-button__color--mobile: #046791;
--usa-banner-domain-icon__color: #046791;
--usa-banner-security-icon__color: #59ac56;
--usa-banner__background-color: #f2f2f2;
--vertical-nav-item__background-color--hover: #f2f2f2;
--vertical-nav-item__border-color: #5a5a5a;
--vertical-nav-item__color--hover: #046791;
--vertical-nav-label-icon__color: #262626;
--vertical-nav-label__border-color--current: #046791;
--vertical-nav-label__color--current: #046791;
--vertical-nav-label__color: #262626;"
`;

exports[`CSS snapshots variables in medicare-theme.css match snapshot 1`] = `
"--accordion-button__color: #404040;
--accordion-content__background-color: #ffffff;
--accordion__background-color--hover: #d9d9d9;
--accordion__background-color: #f2f2f2;
--accordion__border-bottom-left-radius: 0px;
--accordion__border-bottom-right-radius: 0px;
--accordion__border-color: #f2f2f2;
--accordion__border-top-left-radius: 0px;
--accordion__border-top-right-radius: 0px;
--accordion__border-width: 4px;
--accordion__color: #404040;
--alert-bar__width: 8px;
--alert__background-color--error: #f7e6e6;
--alert__background-color--lightweight: #ffffff;
--alert__background-color--success: #f6faf5;
--alert__background-color--warn: #fef9e9;
--alert__background-color: #e9ecf1;
--alert__border-color--error: #b20000;
--alert__border-color--success: #12890e;
--alert__border-color--warn: #f8c41f;
--alert__border-left-color: #1e3c70;
--alert__font-color: #404040;
--alert__icon-size: 1.5rem;
--alert__padding: 16px;
--animation-speed-1: 250ms;
--animation-speed-2: 300ms;
--animation-speed-3: 500ms;
--animation-speed-4: 800ms;
--badge__background-color--alert: #b20000;
--badge__background-color--info: #146a5d;
--badge__background-color--success: #12890e;
--badge__background-color--warn: #f8c41f;
--badge__background-color: #5a5a5a;
--badge__border-radius: 9999px;
--badge__font-color--alert: #ffffff;
--badge__font-color--info: #ffffff;
--badge__font-color--success: #ffffff;
--badge__font-color--warn: #404040;
--badge__font-color: #ffffff;
--button-alt__background-color--active: #ffffff;
--button-alt__background-color--disabled: #ffffff;
--button-alt__background-color--hover: #125f54;
--button-alt__background-color: #ffffff;
--button-alt__border-color--active: #5b978e;
--button-alt__border-color--disabled: #d9d9d9;
--button-alt__border-color--hover: #125f54;
--button-alt__border-color: #146a5d;
--button-alt__color--active: #5b978e;
--button-alt__color--disabled: #d9d9d9;
--button-alt__color--hover: #ffffff;
--button-alt__color: #146a5d;
--button-dark-alt__background-color--active: transparent;
--button-dark-alt__background-color--disabled: transparent;
--button-dark-alt__background-color--hover: transparent;
--button-dark-alt__background-color: transparent;
--button-dark-alt__border-color--active: #62779b;
--button-dark-alt__border-color--disabled: #5a5a5a;
--button-dark-alt__border-color--hover: #bcc5d4;
--button-dark-alt__border-color: #e9ecf1;
--button-dark-alt__color--active: #62779b;
--button-dark-alt__color--disabled: #5a5a5a;
--button-dark-alt__color--hover: #bcc5d4;
--button-dark-alt__color: #e9ecf1;
--button-dark__background-color--active: transparent;
--button-dark__background-color--disabled: transparent;
--button-dark__background-color--hover: transparent;
--button-dark__background-color: transparent;
--button-dark__border-color--active: #d9d9d9;
--button-dark__border-color--disabled: #5a5a5a;
--button-dark__border-color--hover: #f2f2f2;
--button-dark__border-color: #ffffff;
--button-dark__color--active: #d9d9d9;
--button-dark__color--disabled: #5a5a5a;
--button-dark__color--hover: #f2f2f2;
--button-dark__color: #ffffff;
--button-ghost-alt__background-color--active: transparent;
--button-ghost-alt__background-color--disabled: transparent;
--button-ghost-alt__background-color--hover: transparent;
--button-ghost-alt__background-color: transparent;
--button-ghost-alt__border-color--active: transparent;
--button-ghost-alt__border-color--disabled: transparent;
--button-ghost-alt__border-color--hover: transparent;
--button-ghost-alt__border-color: transparent;
--button-ghost-alt__color--active: #5b978e;
--button-ghost-alt__color--disabled: #d9d9d9;
--button-ghost-alt__color--hover: #0e4a41;
--button-ghost-alt__color: #146a5d;
--button-ghost-dark-alt__background-color--active: transparent;
--button-ghost-dark-alt__background-color--disabled: transparent;
--button-ghost-dark-alt__background-color--hover: transparent;
--button-ghost-dark-alt__background-color: transparent;
--button-ghost-dark-alt__border-color--active: transparent;
--button-ghost-dark-alt__border-color--disabled: transparent;
--button-ghost-dark-alt__border-color--hover: transparent;
--button-ghost-dark-alt__border-color: transparent;
--button-ghost-dark-alt__color--active: #d9d9d9;
--button-ghost-dark-alt__color--disabled: #5a5a5a;
--button-ghost-dark-alt__color--hover: #f2f2f2;
--button-ghost-dark-alt__color: #ffffff;
--button-ghost-dark__background-color--active: transparent;
--button-ghost-dark__background-color--disabled: transparent;
--button-ghost-dark__background-color--hover: transparent;
--button-ghost-dark__background-color: transparent;
--button-ghost-dark__border-color--active: transparent;
--button-ghost-dark__border-color--disabled: transparent;
--button-ghost-dark__border-color--hover: transparent;
--button-ghost-dark__border-color: transparent;
--button-ghost-dark__color--active: #d9d9d9;
--button-ghost-dark__color--disabled: #5a5a5a;
--button-ghost-dark__color--hover: #f2f2f2;
--button-ghost-dark__color: #ffffff;
--button-ghost__background-color--active: transparent;
--button-ghost__background-color--disabled: transparent;
--button-ghost__background-color--hover: transparent;
--button-ghost__background-color: transparent;
--button-ghost__border-color--active: transparent;
--button-ghost__border-color--disabled: transparent;
--button-ghost__border-color--hover: transparent;
--button-ghost__border-color: transparent;
--button-ghost__color--active: #62779b;
--button-ghost__color--disabled: #d9d9d9;
--button-ghost__color--hover: #1b3665;
--button-ghost__color: #1e3c70;
--button-solid-alt__background-color--active: #62779b;
--button-solid-alt__background-color--disabled: #d9d9d9;
--button-solid-alt__background-color--hover: #1b3665;
--button-solid-alt__background-color: #1e3c70;
--button-solid-alt__border-color--active: #62779b;
--button-solid-alt__border-color--disabled: #d9d9d9;
--button-solid-alt__border-color--hover: #1b3665;
--button-solid-alt__border-color: #1e3c70;
--button-solid-alt__color--active: #ffffff;
--button-solid-alt__color--disabled: #404040;
--button-solid-alt__color--hover: #ffffff;
--button-solid-alt__color: #ffffff;
--button-solid-dark-alt__background-color--active: #ffffff;
--button-solid-dark-alt__background-color--disabled: #d9d9d9;
--button-solid-dark-alt__background-color--hover: #1b3665;
--button-solid-dark-alt__background-color: #ffffff;
--button-solid-dark-alt__border-color--active: #ffffff;
--button-solid-dark-alt__border-color--disabled: #d9d9d9;
--button-solid-dark-alt__border-color--hover: #1b3665;
--button-solid-dark-alt__border-color: #ffffff;
--button-solid-dark-alt__color--active: #62779b;
--button-solid-dark-alt__color--disabled: #404040;
--button-solid-dark-alt__color--hover: #ffffff;
--button-solid-dark-alt__color: #1e3c70;
--button-solid-dark__background-color--active: #ffffff;
--button-solid-dark__background-color--disabled: #d9d9d9;
--button-solid-dark__background-color--hover: #125f54;
--button-solid-dark__background-color: #ffffff;
--button-solid-dark__border-color--active: #ffffff;
--button-solid-dark__border-color--disabled: #d9d9d9;
--button-solid-dark__border-color--hover: #125f54;
--button-solid-dark__border-color: #ffffff;
--button-solid-dark__color--active: #5b978e;
--button-solid-dark__color--disabled: #404040;
--button-solid-dark__color--hover: #ffffff;
--button-solid-dark__color: #146a5d;
--button-solid__background-color--active: #5b978e;
--button-solid__background-color--disabled: #d9d9d9;
--button-solid__background-color--hover: #125f54;
--button-solid__background-color: #146a5d;
--button-solid__border-color--active: #5b978e;
--button-solid__border-color--disabled: #d9d9d9;
--button-solid__border-color--hover: #125f54;
--button-solid__border-color: #146a5d;
--button-solid__color--active: #ffffff;
--button-solid__color--disabled: #404040;
--button-solid__color--hover: #ffffff;
--button-solid__color: #ffffff;
--button__background-color--active: #ffffff;
--button__background-color--disabled: #ffffff;
--button__background-color--hover: #1b3665;
--button__background-color: #ffffff;
--button__border-color--active: #62779b;
--button__border-color--disabled: #d9d9d9;
--button__border-color--hover: #ffffff;
--button__border-color: #1e3c70;
--button__border-radius: 3px;
--button__border-width: 1px;
--button__color--active: #62779b;
--button__color--disabled: #d9d9d9;
--button__color--hover: #ffffff;
--button__color: #1e3c70;
--choice-label__color--disabled--inverse: #e9ecf1;
--choice-label__color--disabled: #5a5a5a;
--choice-label__top-offset: 0.125rem;
--choice-wrapper__gap--small: 0.75rem;
--choice-wrapper__gap: 1rem;
--choice__background-color--checked: #1e3c70;
--choice__background-color--disabled--inverse: #e9ecf126;
--choice__background-color--disabled: #d9d9d9;
--choice__background-color--inverse: transparent;
--choice__background-color: #ffffff;
--choice__border-color--checked: #1e3c70;
--choice__border-color--disabled--inverse: #a6a6a6;
--choice__border-color--disabled: #a6a6a6;
--choice__border-color--error--inverse: #ffffff;
--choice__border-color--error: #404040;
--choice__border-color--focus: #152a4e;
--choice__border-color--inverse: #ffffff;
--choice__border-color--left: #1e3c70;
--choice__border-color: #404040;
--choice__border-radius: 3px;
--choice__border-width: 2px;
--choice__color--disabled: #5a5a5a;
--choice__color--unchecked: #ffffff;
--choice__size--small: 20px;
--choice__size-radio--small: 12px;
--choice__size-radio: 16px;
--choice__size: 24px;
--color-accent-primary-dark: #a00000;
--color-accent-primary-darker: #7d0000;
--color-accent-primary-darkest: #590000;
--color-accent-primary-light: #c94d4d;
--color-accent-primary-lighter: #e8b3b3;
--color-accent-primary-lightest: #f7e6e6;
--color-accent-primary: #b20000;
--color-background-inverse: #146a5d;
--color-background: #ffffff;
--color-base-inverse: #ffffff;
--color-base: #404040;
--color-black: #000000;
--color-border-dark: #0f1e38;
--color-border-inverse: #ffffff;
--color-border: #d9d9d9;
--color-error-dark: #a00000;
--color-error-darker: #7d0000;
--color-error-darkest: #590000;
--color-error-light: #c94d4d;
--color-error-lighter: #e8b3b3;
--color-error-lightest: #f7e6e6;
--color-error: #b20000;
--color-focus-dark: #c97532;
--color-focus-light: #ffffff;
--color-gray-dark: #5a5a5a;
--color-gray-darker: #404040;
--color-gray-darkest: #262626;
--color-gray-light: #a6a6a6;
--color-gray-lighter: #d9d9d9;
--color-gray-lightest: #f2f2f2;
--color-gray: #808080;
--color-info-dark: #1b3665;
--color-info-darker: #152a4e;
--color-info-darkest: #0f1e38;
--color-info-light: #62779b;
--color-info-lighter: #bcc5d4;
--color-info-lightest: #e9ecf1;
--color-info: #1e3c70;
--color-muted-inverse: #e9ecf1;
--color-muted: #5a5a5a;
--color-primary-dark: #125f54;
--color-primary-darker: #0e4a41;
--color-primary-darkest: #0a352f;
--color-primary-light: #5b978e;
--color-primary-lighter: #b9d2ce;
--color-primary-lightest: #e8f0ef;
--color-primary: #146a5d;
--color-secondary-dark: #1b3665;
--color-secondary-darker: #152a4e;
--color-secondary-darkest: #0f1e38;
--color-secondary-light: #62779b;
--color-secondary-lighter: #bcc5d4;
--color-secondary-lightest: #e9ecf1;
--color-secondary: #1e3c70;
--color-success-dark: #107b0d;
--color-success-darker: #0d600a;
--color-success-darkest: #094507;
--color-success-light: #59ac56;
--color-success-lighter: #b8dcb7;
--color-success-lightest: #f6faf5;
--color-success: #12890e;
--color-transparent-black-alpha25: #00000040;
--color-transparent-black-alpha50: #00000080;
--color-transparent-white-alpha25: #ffffff40;
--color-transparent-white-alpha50: #ffffff80;
--color-transparent: transparent;
--color-visited: #590000;
--color-warn-dark: #dfb01c;
--color-warn-darker: #ae8916;
--color-warn-darkest: #7c6210;
--color-warn-light: #fad662;
--color-warn-lighter: #fdedbc;
--color-warn-lightest: #fef9e9;
--color-warn: #f8c41f;
--color-white: #ffffff;
--day-picker-button__background-color--hover: #e8f0ef;
--dialog-overlay__background-color: #00000080;
--dialog__background-color: #ffffff;
--dialog__padding: 32px;
--drawer-close__color: #000000;
--drawer-footer__background-color: #e9ecf1;
--drawer-header__background-color: transparent;
--drawer-toggle__background-color--hover--inverse: #ffffff;
--drawer-toggle__background-color--hover: #1e3c70;
--drawer-toggle__color--hover--inverse: #5a5a5a;
--drawer-toggle__color--hover: #ffffff;
--drawer__animation-timing: 300ms;
--drawer__background-color: #ffffff;
--drawer__border-color: #d9d9d9;
--field-max-width--medium: 12rem;
--field-max-width--small: 6rem;
--field-max-width: 460px;
--filter-chip-icon__color-active: #ffffff;
--filter-chip-icon__color: #404040;
--filter-chip__background-color--active: #146a5d;
--filter-chip__background-color: #e9ecf1;
--filter-chip__border-color--active: #146a5d;
--filter-chip__border-color: #1e3c70;
--filter-chip__border-radius: 9999px;
--filter-chip__color--active: #ffffff;
--filter-chip__color: #404040;
--font-family-body: 'Rubik', 'Seravek', 'Gill Sans Nova', 'Ubuntu', 'Calibri', 'DejaVu Sans', 'source-sans-pro', 'sans-serif';
--font-family-button: 'Rubik', 'Seravek', 'Gill Sans Nova', 'Ubuntu', 'Calibri', 'DejaVu Sans', 'source-sans-pro', 'sans-serif';
--font-family-heading: 'Montserrat', 'Avenir', 'Corbel', 'URW Gothic', 'source-sans-pro', 'sans-serif';
--font-family-link: 'Rubik', 'Seravek', 'Gill Sans Nova', 'Ubuntu', 'Calibri', 'DejaVu Sans', 'source-sans-pro', 'sans-serif';
--font-line-height-base: 1.5;
--font-line-height-heading: 1.2999999523162842;
--font-line-height-lead: 1.7000000476837158;
--font-line-height-reset: 1;
--font-size-2xl--mobile: 1.75rem;
--font-size-2xl: 2rem;
--font-size-3xl--mobile: 1.875rem;
--font-size-3xl: 2.5rem;
--font-size-4xl--mobile: 2.5rem;
--font-size-4xl: 2.75rem;
--font-size-5xl--mobile: 2.5rem;
--font-size-5xl--tablet: 2.75rem;
--font-size-5xl: 3.125rem;
--font-size-base: 1rem;
--font-size-lg: 1.25rem;
--font-size-md: 1rem;
--font-size-sm: 0.875rem;
--font-size-xl: 1.5rem;
--font-weight-body-lg: 400;
--font-weight-body-md: 400;
--font-weight-body-sm: 400;
--font-weight-bold: 600;
--font-weight-button-lg: 400;
--font-weight-button-md: 400;
--font-weight-button-sm: 400;
--font-weight-heading-2xl: 600;
--font-weight-heading-3xl: 600;
--font-weight-heading-4xl: 600;
--font-weight-heading-5xl: 600;
--font-weight-heading-lg: 600;
--font-weight-heading-md: 600;
--font-weight-heading-sm: 600;
--font-weight-heading-xl: 600;
--font-weight-normal: 400;
--global__color--inverse: #ffffff;
--global__color: #404040;
--global__font-family: 'Rubik', 'Seravek', 'Gill Sans Nova', 'Ubuntu', 'Calibri', 'DejaVu Sans', 'source-sans-pro', 'sans-serif';
--global__font-size: 1rem;
--global__line-height: 1.5;
--grid-columns: 12;
--grid-form-gutter-width: 16px;
--grid-gutter-width: 32px;
--hint__color--inverse: #e9ecf1;
--hint__color: #5a5a5a;
--inline-error__color--inverse: #e8b3b3;
--inline-error__color: #b20000;
--label__font-family: 'Montserrat', 'Avenir', 'Corbel', 'URW Gothic', 'source-sans-pro', 'sans-serif';
--label__font-size: 0.875rem;
--label__font-weight: 600;
--label__letter-spacing: 0.5px;
--label__text-transform: uppercase;
--link-inverse__color--active: #e9ecf1;
--link-inverse__color--hover: #e9ecf1;
--link-inverse__color--visited: #e9ecf1;
--link-inverse__color: #ffffff;
--link__color--active: #1b3665;
--link__color--hover: #1b3665;
--link__color--visited: #590000;
--link__color: #1e3c70;
--link__text-decoration-offset: 3px;
--link__text-decoration-thickness--hover: 2px;
--link__text-decoration-thickness: 1px;
--measure-base: 65ex;
--measure-narrow: 45ex;
--measure-wide: 80ex;
--media-width-lg: 1024px;
--media-width-md: 768px;
--media-width-sm: 544px;
--media-width-xl: 1280px;
--media-width-xs: 0px;
--pagination-current-page__color: #404040;
--pagination-link__color--active: #0a352f;
--pagination-link__color--disabled: #d9d9d9;
--pagination-link__color--focus: #0e4a41;
--pagination-link__color--hover: #0e4a41;
--pagination-link__color: #146a5d;
--pagination-overflow__color: #5a5a5a;
--pagination-page-count__color: #5a5a5a;
--radius-circle: 100%;
--radius-default: 3px;
--radius-large: 8px;
--radius-medium: 4px;
--radius-pill: 9999px;
--radius-small: 2px;
--review__border-color: #d9d9d9;
--site-margins-mobile: 1.5rem;
--site-margins: 3rem;
--site-max-width: 1104px;
--spacer-1: 8px;
--spacer-2: 16px;
--spacer-3: 24px;
--spacer-4: 32px;
--spacer-5: 40px;
--spacer-6: 48px;
--spacer-7: 56px;
--spacer-half: 4px;
--spacer-none: 0px;
--spinner__background-color--inverse: #146a5d;
--spinner__background-color: #ffffff;
--spinner__color--inverse: #ffffff;
--spinner__color: #404040;
--steplist-step__background-color--completed: #404040;
--steplist-step__border-color--default: #5a5a5a;
--steplist-step__border-color: #d9d9d9;
--steplist-step__color--completed: #404040;
--steplist-step__color--current: #ffffff;
--steplist-step__color: #5a5a5a;
--steplist__background-color--current: #146a5d;
--steplist__color--current: #146a5d;
--steplist__color: #5a5a5a;
--table-header__background-color: #f2f2f2;
--table__background-color--striped: #f2f2f2;
--table__border-color: #000000;
--table__padding: 16px;
--tabs-panel__background-color: #ffffff;
--tabs__background-color--disabled: #d9d9d9;
--tabs__background-color--hover: #ffffff;
--tabs__background-color--selected: #ffffff;
--tabs__background-color: #ffffff;
--tabs__border-color--disabled: #d9d9d9;
--tabs__border-color--selected: #146a5d;
--tabs__border-color: #d9d9d9;
--tabs__color--active: #0e4a41;
--tabs__color--disabled: #404040;
--tabs__color--hover: #146a5d;
--tabs__color--selected: #146a5d;
--tabs__color: #404040;
--text-input-currency-icon__line-height: 1;
--text-input-currency-icon__spacing: 32px;
--text-input__background-color--disabled: #d9d9d9;
--text-input__border-color--disabled: #404040;
--text-input__border-color--error--inverse: #e8b3b3;
--text-input__border-color--error: #b20000;
--text-input__border-color--inverse: #808080;
--text-input__border-color: #808080;
--text-input__border-radius: 3px;
--text-input__border-width--disabled: 1px;
--text-input__border-width--error: 3px;
--text-input__border-width: 2px;
--text-input__color: #404040;
--text-input__divider-color: #a6a6a6;
--text-input__line-height: 1.2999999523162842;
--text-input__padding: 16px;
--tooltip-icon__color--inverse: #ffffff;
--tooltip-icon__color: #146a5d;
--tooltip-trigger__color: #404040;
--tooltip__background-color: #ffffff;
--tooltip__border-color--active: #146a5d40;
--tooltip__border-color--inverse-active: #ffffff40;
--tooltip__border-color: #404040;
--tooltip__border-width: 1px;
--tooltip__box-shadow-color: #808080;
--tooltip__color: #404040;
--usa-banner-close-button__background-color--mobile: #d9d9d9;
--usa-banner-close-button__color--mobile: #146a5d;
--usa-banner-domain-icon__color: #146a5d;
--usa-banner-security-icon__color: #59ac56;
--usa-banner__background-color: #f2f2f2;
--usa-banner__no-max-width: 1;
--vertical-nav-item__background-color--hover: #f2f2f2;
--vertical-nav-item__border-color: #5a5a5a;
--vertical-nav-item__color--hover: #146a5d;
--vertical-nav-label-icon__color: #404040;
--vertical-nav-label__border-color--current: #146a5d;
--vertical-nav-label__color--current: #146a5d;
--vertical-nav-label__color: #404040;"
`;
